composer 性能调优